# routes/api.php
@@ -57,8 +57,8 @@ Route::resource('salon-service-types', App\Http\Controllers\API\SalonServiceType
 Route::resource('service-place-types', App\Http\Controllers\API\ServicePlaceTypeAPIController::class)
     ->except(['create', 'edit']);
 
-Route::resource('salon-services', App\Http\Controllers\API\SalonServiceAPIController::class)
-    ->except(['create', 'edit']);
+// Route::resource('salon-services', App\Http\Controllers\API\SalonServiceAPIController::class)
+//     ->except(['create', 'edit']);
 
 Route::resource('salon-pictures', App\Http\Controllers\API\SalonPictureAPIController::class)
     ->except(['create', 'edit']);
